Issue 1 - ver 2 - first clip autoplay set to false

--- a/issue/1.html
+++ b/issue/1.html
@@ -33,7 +33,7 @@
             <div class="caption">
                 <div class = "ttv-wrapper">
                     <img class ="ttv-img" src="Assets/img_background.jpg" alt=""/></img>
-                    <iframe class="media-ttv" src="https://stream.livestreamfails.com/video/5d7e36885eb05.mp4" frameborder="0" allowfullscreen="true" ></iframe>
+                    <iframe class="media-ttv" src="https://stream.livestreamfails.com/video/5d7e36885eb05.mp4" frameborder="0" allowfullscreen="true" autoplay="false" ></iframe>
                 </div>
                 Above: The first clip from Saruei to catch widespread attention online.
             </div>
