Issue 1 - ver 6 - ammended autoplay, rectified version number on tab text

--- a/issue/1.html
+++ b/issue/1.html
@@ -10,7 +10,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./nppr.css">
-    <title>Issue 0.1 - TheDailyBate</title>
+    <title>Issue 1 - TheDailyBate - 19/09/2019 </title>
     <meta name="viewport" content="width=device-width">
 
 </head>
@@ -45,7 +45,7 @@
             <div class="caption">
                 <div class = "ttv-wrapper">
                     <img class ="ttv-img" src="Assets/img_background.jpg" alt=""/></img>
-                    <iframe class="media-ttv" src="https://stream.livestreamfails.com/video/5d7e36885eb05.mp4" frameborder="0" allowfullscreen="true" autoplay="false" ></iframe>
+                    <video class="media-ttv" src="https://stream.livestreamfails.com/video/5d7e36885eb05.mp4" frameborder="0" allowfullscreen="true" controls></video>
                 </div>
                 Above: The first clip from Saruei to catch widespread attention online.
             </div>
