Issue 2 - ver. 1 - initial commit + changes to index and issue 1

--- a/issue/1.html
+++ b/issue/1.html
@@ -44,7 +44,7 @@
             <br>
             <div class="caption">
                 <div class = "ttv-wrapper">
-                    <img class ="ttv-img" src="Assets/img_background.jpg" alt=""/></img>
+                    <img class ="ttv-img" src="Assets/img_background.jpg" alt=""/>
                     <video class="media-ttv" src="https://stream.livestreamfails.com/video/5d7e36885eb05.mp4" frameborder="0" allowfullscreen="true" controls></video>
                 </div>
                 Above: The first clip from Saruei to catch widespread attention online.
