--- a/issue/2.html
+++ b/issue/2.html
@@ -53,7 +53,7 @@
             <br>
             <div class="caption">
                 <img class = "ntv-img" src="https://pbs.twimg.com/media/EEh0LnoXoAEV-am?format=jpg&name=900x900" alt=""/>
-                Above: SHiFT's <a href="https://twitter.com/shiftposting/status/1173315451226677248" target="_blank">tweet</a> announcing his emote's rejection, including a screenshot of the image in question.
+                Above: SHiFT's <a href="Assets/20190920_2/SHiFT_emote_rejection.jpg" target="_blank">tweet</a> announcing his emote's rejection, including a screenshot of the image in question.
             </div>
             <br><br>
             <div class="para">
