Issue 2 - ver 4 - Twitter hosted image blocked on firefox FIX

--- a/issue/2.html
+++ b/issue/2.html
@@ -52,8 +52,8 @@
             </div>
             <br>
             <div class="caption">
-                <img class = "ntv-img" src="https://pbs.twimg.com/media/EEh0LnoXoAEV-am?format=jpg&name=900x900" alt=""/>
-                Above: SHiFT's <a href="Assets/20190920_2/SHiFT_emote_rejection.jpg" target="_blank">tweet</a> announcing his emote's rejection, including a screenshot of the image in question.
+                <img class = "ntv-img" src="Assets/20190920_2/SHiFT_emote_rejection.jpg" alt=""/>
+                Above: SHiFT <a href="https://twitter.com/shiftposting/status/1173315451226677248" target="_blank">tweet</a> announced his emote's rejection on twitter, including a screenshot of the image in question.
             </div>
             <br><br>
             <div class="para">
