Updated formatting and maintenance

--- a/index.html
+++ b/index.html
@@ -22,26 +22,57 @@
         <div class = "title1">
             <h1>The Daily Bate</h1>
             <div class="subtitle" style="font-weight: 900">
-                The <span style="color: red">HOTTEST</span> Live-Streaming News, delivered Daily
+                Streamer News Done Right!
             </div>
         </div>
     <div style="padding: 30px">
-        <div> List of Issues (click to expand):
+        <div> List of Issues (click article to expand):
             <ul>
-                <li class="homepageItem" onclick="homepageExpand(event, 'Issue1')">Issue 1, 19 SEP 2019 - "Hentai Artist's Drawn Out Battle"</li>
-                <div id="Issue1" class="homepageDescription" style="margin: 10px">
-                    Art comes in many forms, but one controversial streamer has garnered unwanted attention in the form of a three-day ban for drawing lewd, anime-style characters. The 2d doodle doodler in question is French illustrator and concept artist, Saruei. 
-                    <div style = "margin-top: 10px; justify-content: center; display:flex">
-                        <div style="padding-right:10px">Read the Full Article: <a href="https://thedailybate.com/issue/1">here</a> </div>
-                        <div style="padding-left: 10px">Watch a video summary: <a href="https://youtu.be/Fg1K0zVxdeg" target="_blank">here</a></div>
+                <li class="homepageItem" onclick="homepageExpand(event, 'Issue2')">&#187; Issue 2, 20 SEP 2019 - "Spongebob's bikini bottom sparks controversy" 
+                </li>
+                <ul class="homepageSubItemUL"><li class="homepageSubItemLI" onclick="homepageExpand(event, 'I2A1')">&#187; forsenDiglett removed</li>
+                    <div id='I2A1' class="homepageDescription">
+                        With over one million followers and, at the time of writing, nine thousand subscribers, Sebastian "Forsen" Fors is one of the largest streamers on the platform, with some of the most widely used emotes. On the 17th of September, Fors tweeted that his "forsenDiglett" emote had been removed.
+                        <div class="expand">
+                            <div class="expandL">Jump to the Article: <a href="https://thedailybate.com/issue/2#Article1">here</a> 
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <li class="homepageItem" onclick="homepageExpand(event, 'Issue2')">Issue 2, 20 SEP 2019 - "Spongebob's bikini bottom sparks controversy"</li>
+                </ul>
+                    <ul class="homepageSubItemUL"><li class="homepageSubItemLI" onclick="homepageExpand(event, 'I2A2')" >&#187; Spongebob's ripped pants rejected</li>
+                    <div id='I2A2' class="homepageDescription">
+                        World-record holding speedrunner and streamer, "SHiFT", generally enjoys the same benefits as all partnered broadcasters on the platform, one of which is an extensive number of custom emote slots. One emote, however, was too egregious for Twitch's moderation team to allow. The vile image in question was a recreation of a scene from the popular children's television programme, SpongeBob Squarepants.
+                        <div class="expand">
+                            <div class="expandL">Jump to the Article: <a href="https://thedailybate.com/issue/2#Article2">here</a> 
+                            </div>
+                        </div>
+                    </div>    
+                </ul>
+                    <ul class="homepageSubItemUL"><li class="homepageSubItemLI" onclick="homepageExpand(event, 'I2A3')">&#187; Pepe the Frog's Blackface Debacle</li>
+                    <div id='I2A3' class="homepageDescription">
+                        On the 16th of September Czech streamer Honza "Sweezy" Kulich not only faced the loss of one of his custom emotes but was also met with a one-day suspension for "hateful conduct".
+                        <br><br>
+                        Kulich had adapted a popular frog emote, PepeLaugh, used in over 25 thousand channels through the FrankerFacez browser extension, to his liking. The streamer changed the character's skin tone from green to black and increased the hue on its lips. Unfortunately, this combination of large, bright red lips and darker skin, drew uncomfortable parallels to "blackface".
+                        <div class="expand">
+                            <div class="expandL">Jump to the Article: <a href="https://thedailybate.com/issue/2#Article3">here</a> 
+                            </div>
+                        </div>
+                    </div>        
+                </ul>
                 <div id="Issue2" class="homepageDescription" style="margin: 10px">
                     Twitch chats are buzzing, hectic sprawls of text, dotted throughout with graphics known as emotes. While many are available to all users, some of the most loved images on the site are the emotes enabled only for those who have subscribed to a certain streamer. They are used as a form of expression, a comedy, and are heavily tied to the identity of a stream community. As such, it was with heavy hearts that users had to farewell a number of popular emotes this week, as Twitch removed them from the site.
-                    <div style = "margin-top: 10px; justify-content: center; display:flex">
-                        <div style="padding-right:10px">Read the Full Article: <a href="https://thedailybate.com/issue/2">here</a> 
+                    <div class="expand">
+                        <div class="expandL">Read the Full Issue: <a href="https://thedailybate.com/issue/2">here</a> 
                         </div>
+                    </div>
+                </div>
+                <li class="homepageItem" onclick="homepageExpand(event, 'Issue1')">&#187; Issue 1, 19 SEP 2019 - "Hentai Artist's Drawn Out Battle"</li>
+                <ul class="homepageSubItemUL"><li class="homepageSubItemLI" onclick="homepageExpand(event, 'Issue1')">&#187; Artist Saruei Banned</li></ul>
+                <div id="Issue1" class="homepageDescription" style="margin: 10px">
+                    Art comes in many forms, but one controversial streamer has garnered unwanted attention in the form of a three-day ban for drawing lewd, anime-style characters. The 2d doodle doodler in question is French illustrator and concept artist, Saruei. 
+                    <div class="expand">
+                        <div class="expandL">Read the Full Issue: <a href="https://thedailybate.com/issue/1">here</a> </div>
+                        <div class="expandR">Watch a video summary: <a href="https://youtu.be/Fg1K0zVxdeg" target="_blank">here</a></div>
                     </div>
                 </div>
             </ul>
