--- a/issue/2.html
+++ b/issue/2.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="./nppr.css">
     <title>Issue 2 - TheDailyBate - 20/09/2019 </title>
     <meta name="viewport" content="width=device-width">
-
+    <script>window.onload=function(){
+            if(window.location.hash!=""){
+                document.getElementById(window.location.hash.substr(1)).style="background-color:yellow;"
+            }
+        }</script>
 </head>
 <body>
 	<!-- Google Tag Manager (noscript) -->
@@ -33,7 +37,7 @@
             <div class = "para">
                 Twitch chats are buzzing, hectic sprawls of text, dotted throughout with graphics known as emotes. While many are available to all users, some of the most loved images on the site are the emotes enabled only for those who have subscribed to a certain streamer. They are used as a form of expression, a comedy, and are heavily tied to the identity of a stream community. As such, it was with heavy hearts that users had to farewell a number of popular emotes this week, as Twitch removed them from the site.
             </div>
-            <h4>forsenDiglett removed</h4>
+            <h4 id="Article1">forsenDiglett removed</h4>
             <div class="para">
                 With over <a href="https://twitchtracker.com/forsen/statistics" target="_blank">one million followers</a> and, at the time of writing, <a href="https://twitchtracker.com/forsen/subscribers">nine thousand subscribers</a>, Sebastian <a href="https://www.twitch.tv/forsen" target="_blank">"Forsen"</a> Fors is one of the largest streamers on the platform, with some of the most widely used emotes. On the 17th of September, Fors <a href="https://twitter.com/Forsen/status/1173960244470452225" target="_blank">tweeted</a> that his "forsenDiglett" emote had been removed. 
             </div>
@@ -46,7 +50,7 @@
             <div class="para">
                 Although the redaction of forsDiglett was not unexpected or unfathomable by any stretch of the imagination, it depicted a child being held at the throat, an act in flagrant violation of the site's terms, it was nonetheless a disappointment to some of the streamers oldest subscribers.
             </div>
-            <h4>SpongeBob's ripped pants rejected</h4>
+            <h4 id="Article2">SpongeBob's ripped pants rejected</h4>
             <div class="para">
                 World-record holding speedrunner and streamer, <a href="https://www.twitch.tv/shift" target="_blank">"SHiFT"</a>, generally enjoys the same <a href="https://www.twitch.tv/p/partners/" target="_blank">benefits as all partnered broadcasters</a> on the platform, one of which is an extensive number of custom emote slots. One emote, however, was too egregious for Twitch's moderation team to allow. The vile image in question was a recreation of a scene from the popular children's television programme, SpongeBob Squarepants.
             </div>
@@ -77,7 +81,7 @@
                 Above: Various "butt-style" emotes which are currently available on the site. <br>Top-Left: inkyThicc by <a href="https://www.twitch.tv/inky" target="_blank">Inky</a>; Top-Middle: missquThicc by <a href="https://www.twitch.tv/MissQueenKawaii" target="_blank">MissQueenKawaii</a>; Top-Right: anomTHICC by <a href="https://www.twitch.tv/anomaly" target="_blank">Anomaly</a>; Bottom-Left: ammoButt by <a href="https://www.twitch.tv/amouranth" target="_blank">Amouranth</a>; Bottom-Right: kittyThic by <a href="https://www.twitch.tv/kittyplays" target="_blank">KittyPlays</a>.
             </div>
             <br>
-            <h4>Pepe the Frog's Blackface Debacle</h4>
+            <h4 id="Article3">Pepe the Frog's Blackface Debacle</h4>
             <div class="para">
                 On the 16th of September Czech streamer Honza <a href="https://www.twitch.tv/sweezy" target="_blank">"Sweezy"</a> Kulich not only faced the loss of one of his custom emotes but was also met with a one-day suspension for <a href="https://twitter.com/SweezyXD/status/1173489385880412161" target="_blank">"hateful conduct"</a>. 
             </div>
